manifests/vaultwarden/base/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden-postgresql
  labels:
    app: vaultwarden-database
spec:
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  serviceName: vaultwarden-postgresql-hl
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: vaultwarden-database
  template:
    metadata:
      name: vaultwarden-postgresql
      labels:
        app: vaultwarden-database
    spec:
      serviceAccountName: default
      containers:
        - name: postgres
          image: docker.io/postgres:14
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "$POSTGRES_USER" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "$POSTGRES_USER" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits: {}
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: freenas-iscsi-manual-csi
        resources:
          requests:
            storage: 20Gi
