manifests/vaultwarden/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: vaultwarden-postgresql-hl
  labels:
    app: vaultwarden-database
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  selector:
    app: vaultwarden-database
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: 5432
---
kind: Service
apiVersion: v1
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  selector:
    app: vaultwarden
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
