manifests/vaultwarden/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  labels:
    gateway: public
    app: vaultwarden
spec:
  hostnames:
    - bitwarden.stamx.nl
  parentRefs:
    - name: public
      namespace: gateway-public
      sectionName: https
  rules:
    - backendRefs:
        - name: vaultwarden
          port: 80
