manifests/vaultwarden/base/manifest.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden-postgresql
  labels:
    app: vaultwarden-database
spec:
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  serviceName: vaultwarden-postgresql-hl
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: vaultwarden-database
  template:
    metadata:
      name: vaultwarden-postgresql
      labels:
        app: vaultwarden-database
    spec:
      serviceAccountName: default
      containers:
        - name: postgres
          image: docker.io/postgres:14
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "$POSTGRES_USER" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "$POSTGRES_USER" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits: {}
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: freenas-iscsi-manual-csi
        resources:
          requests:
            storage: 20Gi

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: vaultwarden-database
              topologyKey: "kubernetes.io/hostname"
      securityContext:
        fsGroup: 1000
      containers:
        - name: vaultwarden
          image: ghcr.io/dani-garcia/vaultwarden:latest
          imagePullPolicy: Always
          securityContext:
            runAsGroup: 1000
            runAsUser: 1000
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          volumeMounts:
            - name: vaultwarden
              mountPath: /data
          resources: {}
      volumes:
        - name: vaultwarden
          persistentVolumeClaim:
            claimName: vaultwarden-data-pvc-nfs

---
kind: Service
apiVersion: v1
metadata:
  name: vaultwarden-postgresql-hl
  labels:
    app: vaultwarden-database
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  selector:
    app: vaultwarden-database
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: 5432

---
kind: Service
apiVersion: v1
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  selector:
    app: vaultwarden
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: vaultwarden-public
  labels:
    app: vaultwarden
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 250m
spec:
  ingressClassName: nginx-public
  rules:
    - host: "bitwarden.stamx.nl"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  name: http
  tls:
    - hosts:
        - bitwarden.stamx.nl
      secretName: tls-wildcard-stamx-nl

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  labels:
    gateway: public
    app: vaultwarden
spec:
  hostnames:
    - bitwarden.stamx.nl
  parentRefs:
    - name: public
      namespace: gateway-public
      sectionName: https
  rules:
    - backendRefs:
        - name: vaultwarden
          port: 80
